Fix another batch of issues